--- a/visas-by-state.ipynb
+++ b/visas-by-state.ipynb
@@ -44,7 +44,7 @@
       "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
       "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_mac64.zip\n",
       "Driver has been saved in cache [/Users/areena.arora/.wdm/drivers/chromedriver/mac64/96.0.4664.45]\n",
-      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_17875/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_25471/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -56,105 +56,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "96c397c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open the link\n",
-    "driver.get(\"https://www.myvisajobs.com/Reports/2021-H1B-Visa-Category.aspx?T=WS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4f7073f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rank</th>\n",
-       "      <th>state</th>\n",
-       "      <th>number_of_applications</th>\n",
-       "      <th>average salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>California</td>\n",
-       "      <td>115871</td>\n",
-       "      <td>$133,057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Texas</td>\n",
-       "      <td>59022</td>\n",
-       "      <td>$103,411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>46800</td>\n",
-       "      <td>$119,431</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  rank       state number_of_applications average salary\n",
-       "1    1  California                 115871       $133,057\n",
-       "2    2       Texas                  59022       $103,411\n",
-       "3    3    New York                  46800       $119,431"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table = driver.find_element(By.TAG_NAME, \"table\")\n",
-    "table.get_attribute('outerHTML')\n",
-    "df = pd.read_html(table.get_attribute('outerHTML'))[3]\n",
-    "df.columns = ['rank', 'state', 'number_of_applications' , 'average salary']\n",
-    "df.drop(index=df.index[0], \n",
-    "        axis=0, \n",
-    "        inplace=True)\n",
-    "df.head(3)"
+    "# driver.get(\"https://www.myvisajobs.com/Reports/2021-H1B-Visa-Category.aspx?T=WS\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1a3582",
+   "id": "4f7073f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# driver.current_url"
+    "# table = driver.find_element(By.TAG_NAME, \"table\")\n",
+    "# table.get_attribute('outerHTML')\n",
+    "# df = pd.read_html(table.get_attribute('outerHTML'))[3]\n",
+    "# df.columns = ['rank', 'state', 'number_of_applications' , 'average salary']\n",
+    "# df.drop(index=df.index[0], \n",
+    "#         axis=0, \n",
+    "#         inplace=True)\n",
+    "# df.head(3)"
    ]
   },
   {
@@ -192,16 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "9ec67203",
    "metadata": {},
    "outputs": [],
    "source": [
     "href_list = []\n",
-    "years = [\n",
-    "    \"2011\",\n",
-    "    \"2012\",\n",
-    "    \"2013\",\"2014\",\"2015\", \"2016\", \"2017\", \"2018\", \"2019\", \"2020\"]\n",
+    "years = [\"2016\", \"2017\", \"2018\", \"2019\", \"2020\", \"2021\"]\n",
     "for year in years:\n",
     "    href = \"https://www.myvisajobs.com/Reports/\" + year + \"-H1B-Visa-Category.aspx?T=WS#LCA\"\n",
     "#   print(href)\n",
@@ -210,51 +132,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d2bb87da",
+   "execution_count": 14,
+   "id": "fdc5a516",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['https://www.myvisajobs.com/Reports/2011-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2012-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2013-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2014-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2015-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2016-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2017-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2018-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2019-H1B-Visa-Category.aspx?T=WS#LCA',\n",
-       " 'https://www.myvisajobs.com/Reports/2020-H1B-Visa-Category.aspx?T=WS#LCA']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.myvisajobs.com/Reports/2016-H1B-Visa-Category.aspx?T=WS#LCA\n",
+      "https://www.myvisajobs.com/Reports/2017-H1B-Visa-Category.aspx?T=WS#LCA\n",
+      "https://www.myvisajobs.com/Reports/2018-H1B-Visa-Category.aspx?T=WS#LCA\n",
+      "https://www.myvisajobs.com/Reports/2019-H1B-Visa-Category.aspx?T=WS#LCA\n",
+      "https://www.myvisajobs.com/Reports/2020-H1B-Visa-Category.aspx?T=WS#LCA\n",
+      "https://www.myvisajobs.com/Reports/2021-H1B-Visa-Category.aspx?T=WS#LCA\n"
+     ]
     }
    ],
    "source": [
-    "href_list"
+    "for each_link in href_list:\n",
+    "    print(each_link)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6c120c",
+   "id": "56fb51f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each_link in href_list:\n",
+    "#     driver.get(\"each_link\")\n",
+    "#     table = driver.find_element(By.TAG_NAME, \"table\")\n",
+    "#     table.get_attribute('outerHTML')\n",
+    "#     df = pd.read_html(table.get_attribute('outerHTML'))[3]\n",
+    "#     df.columns = ['rank', 'state', 'number_of_applications' , 'average salary']\n",
+    "#     df.drop(index=df.index[0], \n",
+    "#         axis=0, \n",
+    "#         inplace=True)\n",
+    "#     df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "821cccc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_each_table(link):\n",
+    "    driver.get(link)\n",
+    "    table = driver.find_element(By.TAG_NAME, \"table\")\n",
+    "    table.get_attribute('outerHTML')\n",
+    "    df = pd.read_html(table.get_attribute('outerHTML'))[3]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "122be01a",
    "metadata": {},
    "outputs": [],
    "source": [
     "for each_link in href_list:\n",
-    "    driver.get(\"https://www.myvisajobs.com/Reports/2021-H1B-Visa-Category.aspx?T=WS\")\n",
-    "table = driver.find_element(By.TAG_NAME, \"table\")\n",
-    "table.get_attribute('outerHTML')\n",
-    "df = pd.read_html(table.get_attribute('outerHTML'))[3]\n",
-    "df.columns = ['rank', 'state', 'number_of_applications' , 'average salary']\n",
-    "df.drop(index=df.index[0], \n",
-    "        axis=0, \n",
-    "        inplace=True)\n",
-    "df.head(3)"
+    "    df_each_year = get_each_table(each_link)"
    ]
   }
  ],
