--- a/visas-by-state.ipynb
+++ b/visas-by-state.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "643efb97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/areena.arora/.pyenv/versions/3.10.0/lib/python3.10/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "# Do all the necessary imports\n",
     "from selenium import webdriver\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "22d7ea42",
    "metadata": {},
    "outputs": [
@@ -33,8 +42,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 96.0.4664\n",
       "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Driver [/Users/areena.arora/.wdm/drivers/chromedriver/mac64/96.0.4664.45/chromedriver] found in cache\n",
-      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_31877/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/areena.arora/.wdm/drivers/chromedriver/mac64/96.0.4664.45]\n",
+      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_40348/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "96c397c7",
    "metadata": {},
    "outputs": [],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "4f7073f2",
    "metadata": {},
    "outputs": [],
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "88b42075",
    "metadata": {},
    "outputs": [],
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "a3023e81",
    "metadata": {},
    "outputs": [],
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "98c568d9",
    "metadata": {},
    "outputs": [],
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "9ec67203",
    "metadata": {},
    "outputs": [],
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "fdc5a516",
    "metadata": {},
    "outputs": [
@@ -146,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "56fb51f1",
    "metadata": {},
    "outputs": [],
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "821cccc0",
    "metadata": {},
    "outputs": [],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "122be01a",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6991fdb",
+   "id": "f604d1a0",
    "metadata": {},
    "outputs": [],
    "source": []
