--- a/visas-by-state.ipynb
+++ b/visas-by-state.ipynb
@@ -42,9 +42,8 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 96.0.4664\n",
       "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/areena.arora/.wdm/drivers/chromedriver/mac64/96.0.4664.45]\n",
-      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_40348/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "Driver [/Users/areena.arora/.wdm/drivers/chromedriver/mac64/96.0.4664.45/chromedriver] found in cache\n",
+      "/var/folders/81/2s24wkdd02j9528vnjsx7m080000gn/T/ipykernel_45167/1677810314.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -1557,8 +1556,475 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f604d1a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rank</td>\n",
+       "      <td>Work State</td>\n",
+       "      <td>Number of LCA *</td>\n",
+       "      <td>Average Salary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>California</td>\n",
+       "      <td>115871</td>\n",
+       "      <td>$133,057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>59022</td>\n",
+       "      <td>$103,411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>46800</td>\n",
+       "      <td>$119,431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>32392</td>\n",
+       "      <td>$130,648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>31283</td>\n",
+       "      <td>$108,412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>27672</td>\n",
+       "      <td>$101,266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>22819</td>\n",
+       "      <td>$108,441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>20792</td>\n",
+       "      <td>$102,793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>19750</td>\n",
+       "      <td>$101,629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>19595</td>\n",
+       "      <td>$100,349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>17233</td>\n",
+       "      <td>$93,223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>17197</td>\n",
+       "      <td>$96,247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>16781</td>\n",
+       "      <td>$104,450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>13991</td>\n",
+       "      <td>$97,154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>10070</td>\n",
+       "      <td>$98,698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Maryland</td>\n",
+       "      <td>9353</td>\n",
+       "      <td>$103,244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>8813</td>\n",
+       "      <td>$100,008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>8638</td>\n",
+       "      <td>$103,595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Missouri</td>\n",
+       "      <td>8213</td>\n",
+       "      <td>$96,802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>6472</td>\n",
+       "      <td>$103,715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>6438</td>\n",
+       "      <td>$93,109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Indiana</td>\n",
+       "      <td>6017</td>\n",
+       "      <td>$94,089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>5491</td>\n",
+       "      <td>$98,665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>$106,083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>4166</td>\n",
+       "      <td>$90,937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>26</td>\n",
+       "      <td>District of Columbia</td>\n",
+       "      <td>3757</td>\n",
+       "      <td>$108,155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>3036</td>\n",
+       "      <td>$93,807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>2896</td>\n",
+       "      <td>$99,313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>2890</td>\n",
+       "      <td>$106,048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>2654</td>\n",
+       "      <td>$95,828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>31</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>2604</td>\n",
+       "      <td>$95,461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>2238</td>\n",
+       "      <td>$102,339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>2173</td>\n",
+       "      <td>$97,535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Nebraska</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>$96,472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1727</td>\n",
+       "      <td>$106,244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>36</td>\n",
+       "      <td>New Hampshire</td>\n",
+       "      <td>1559</td>\n",
+       "      <td>$103,829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>1473</td>\n",
+       "      <td>$94,473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>1454</td>\n",
+       "      <td>$109,767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>1393</td>\n",
+       "      <td>$103,720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>40</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>972</td>\n",
+       "      <td>$107,422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>778</td>\n",
+       "      <td>$122,443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>737</td>\n",
+       "      <td>$98,180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>503</td>\n",
+       "      <td>$127,667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>44</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>422</td>\n",
+       "      <td>$154,387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>393</td>\n",
+       "      <td>$103,854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>46</td>\n",
+       "      <td>North Dakota</td>\n",
+       "      <td>333</td>\n",
+       "      <td>$121,633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>47</td>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>284</td>\n",
+       "      <td>$113,815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Vermont</td>\n",
+       "      <td>226</td>\n",
+       "      <td>$97,207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>49</td>\n",
+       "      <td>Montana</td>\n",
+       "      <td>159</td>\n",
+       "      <td>$117,393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>117</td>\n",
+       "      <td>$108,937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>51</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>96</td>\n",
+       "      <td>$123,032</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0                     1                2               3\n",
+       "0   Rank            Work State  Number of LCA *  Average Salary\n",
+       "1      1            California           115871        $133,057\n",
+       "2      2                 Texas            59022        $103,411\n",
+       "3      3              New York            46800        $119,431\n",
+       "4      4            Washington            32392        $130,648\n",
+       "5      5            New Jersey            31283        $108,412\n",
+       "6      6              Illinois            27672        $101,266\n",
+       "7      7         Massachusetts            22819        $108,441\n",
+       "8      8        North Carolina            20792        $102,793\n",
+       "9      9          Pennsylvania            19750        $101,629\n",
+       "10    10               Georgia            19595        $100,349\n",
+       "11    11              Michigan            17233         $93,223\n",
+       "12    12               Florida            17197         $96,247\n",
+       "14    13              Virginia            16781        $104,450\n",
+       "15    14                  Ohio            13991         $97,154\n",
+       "16    15               Arizona            10070         $98,698\n",
+       "17    16              Maryland             9353        $103,244\n",
+       "18    17             Minnesota             8813        $100,008\n",
+       "19    18           Connecticut             8638        $103,595\n",
+       "20    19              Missouri             8213         $96,802\n",
+       "21    20              Colorado             6472        $103,715\n",
+       "22    21             Tennessee             6438         $93,109\n",
+       "23    22               Indiana             6017         $94,089\n",
+       "24    23             Wisconsin             5491         $98,665\n",
+       "25    24                Oregon             4405        $106,083\n",
+       "26    25              Arkansas             4166         $90,937\n",
+       "27    26  District of Columbia             3757        $108,155\n",
+       "28    27                  Utah             3036         $93,807\n",
+       "29    28                  Iowa             2896         $99,313\n",
+       "30    29              Delaware             2890        $106,048\n",
+       "31    30              Kentucky             2654         $95,828\n",
+       "32    31        South Carolina             2604         $95,461\n",
+       "33    32          Rhode Island             2238        $102,339\n",
+       "34    33                Kansas             2173         $97,535\n",
+       "35    34              Nebraska             1880         $96,472\n",
+       "36    35               Alabama             1727        $106,244\n",
+       "37    36         New Hampshire             1559        $103,829\n",
+       "38    37              Oklahoma             1473         $94,473\n",
+       "39    38             Louisiana             1454        $109,767\n",
+       "40    39                Nevada             1393        $103,720\n",
+       "41    40            New Mexico              972        $107,422\n",
+       "42    41           Mississippi              778        $122,443\n",
+       "43    42                 Idaho              737         $98,180\n",
+       "44    43                 Maine              503        $127,667\n",
+       "45    44         West Virginia              422        $154,387\n",
+       "46    45                Hawaii              393        $103,854\n",
+       "47    46          North Dakota              333        $121,633\n",
+       "48    47          South Dakota              284        $113,815\n",
+       "49    48               Vermont              226         $97,207\n",
+       "50    49               Montana              159        $117,393\n",
+       "51    50                Alaska              117        $108,937\n",
+       "52    51               Wyoming               96        $123,032"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_each_year.drop(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cd2601",
    "metadata": {},
    "outputs": [],
    "source": []
